# OpenGL_Shaders_Learn

./: .gitignore  CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
Shaders/: shader.frag  shader.vert
